--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Petsgram</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Petsgram</title>
+  <script src="//code-sa1.jivosite.com/widget/70E6zX306t" async></script>
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
